--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,13 @@
     <%= javascript_include_tag 'https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
+    <%= Gon::Base.render_data %>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   </head>
 
-  <body onload="initialize()">
+  <body>
 
     <%= yield %>
 
